<resources>
    <string name="app_name">Application</string>
    <string name="search_mail">Search mail</string>
    <string name="user">User</string>
    <string name="menu">Menu</string>
    <string name="dark_mode">Dark</string>
    <string name="label_name">Label Name</string>
    <string name="_0">0</string>
    <string name="add_label">Add Label</string>
    <string name="compose_new_email">Compose new email</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="sender">sender</string>
    <string name="mail_body_preview">Mail body preview</string>
    <string name="subject">Subject</string>
    <string name="sender_name">Sender Name</string>
    <string name="_26_jun">26 Jun</string>
    <string name="back">back</string>
    <string name="more">more</string>
    <string name="delete_mail">Delete Mail</string>
    <string name="move_to_label">Move to Label</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_gmailish">Welcome to Gmailish</string>
</resources>