<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="32dp"
            android:gravity="center"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@color/backGroundMain">

            <TextView
                android:text="@string/welcome_to_gmailish"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"

                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/emailInput"
                android:hint="@string/email"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/hintColor"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:background="@drawable/rounded_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/passwordInput"
                android:hint="@string/password"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/hintColor"
                android:inputType="textPassword"
                android:padding="14dp"
                android:background="@drawable/rounded_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp" />

            <Button
                android:id="@+id/signInButton"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/goToSignUp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="96dp"
        android:layout_height="59dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:text=""
        android:thumb="@drawable/thumb_selector"
        app:track="@drawable/track_selector" />
</FrameLayout>

